Further workspace details in pmrapp
- Progressing towards feature parity with sauron in the leptos version.

--- a/pmrapp/style/main.scss
+++ b/pmrapp/style/main.scss
@@ -28,6 +28,7 @@ table.file-listing td.gitobj-tree span::before {
   content: '\1f4c1 ';
 }
 
+table.file-listing td.gitobj-exe span::before,
 table.file-listing td.gitobj-blob span::before {
   content: '\1f4c4 ';
 }
