--- a/pmrapp/style/main.scss
+++ b/pmrapp/style/main.scss
@@ -133,10 +133,13 @@ main > aside > section > nav > ul > li > a:hover {
 
   main > aside {
     max-width: 330px;
+    margin-right: 1em;
   }
 
   main > aside > * {
     width: 330px;
+    max-width: 330px;
+    overflow-x: hidden;
   }
 }
 
