Integration enforcer with workspaces
- Updated resource usage for workspace components to be more idiomatic
  leptos-0.7.
- Revert the change that brought the ContentAction out of the main app,
  as having that in individual components causes unexpected signal
  disposals error, and it actually doesn't work when reused.
- Unfortunately the above change means that we were forced to put the
  component after the main content, so that the futures will resolve to
  have the items be populated properly, and then rely on CSS to put the
  content bar above the main article.
- Shuffle markup as a consequence of this.

--- a/pmrapp/style/main.scss
+++ b/pmrapp/style/main.scss
@@ -75,9 +75,15 @@ main {
     grid-area: main;
 }
 
-main > article {
+main > section {
     flex: 1;
     padding: 0 1em;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+main > section > article {
+    flex: 1;
 }
 
 main > aside {
