Some more rudimentary error handling/response
- For the create exposure form, style it as per the standard form and
  provide message on failure.
- Style the error for the login form.
- Also provide error messages for other serverfn error types.
- Redirect to logout page on logout (to avoid dealing with reactive
  signals for permissions for now).

--- a/pmrapp/style/main.scss
+++ b/pmrapp/style/main.scss
@@ -350,8 +350,23 @@ form.standard input[type="text"] {
     padding: 0.5em;
 }
 
+form.standard button,
 form.standard input[type="submit"] {
     box-sizing: border-box;
     width: auto;
     padding: 0.5em 3.5em;
+}
+
+.standard.error {
+    color: #600;
+    padding: 0.5em;
+    background: #fff8f8;
+    border: solid 1px #fdd;
+}
+
+.standard.ok {
+    color: #060;
+    padding: 0.5em;
+    background: #f8fff8;
+    border: solid 1px #dfd;
 }
