Form to create new exposure file.
- The rendering of the user inputs for the files have not been done yet,
  along with the update hook to whatever that looks like will need to be
  done so whenever the file is created, the UI should update properly.

--- a/pmrapp/style/main.scss
+++ b/pmrapp/style/main.scss
@@ -344,6 +344,7 @@ form.standard label {
     padding: 0.25em 0;
 }
 
+form.standard select,
 form.standard input[type="text"] {
     box-sizing: border-box;
     width: 100%;
