--- a/pmrapp/style/main.scss
+++ b/pmrapp/style/main.scss
@@ -371,3 +371,77 @@ form.standard input[type="submit"] {
     background: #f8fff8;
     border: solid 1px #dfd;
 }
+
+form .status .error,
+form .status .okay,
+form .status .spinner,
+form .status {
+    display: inline;
+}
+
+form .status .error,
+form .status .okay,
+form .status .spinner {
+    margin: 0 0.5em;
+}
+
+form .status .okay {
+    color: #070;
+    transition: opacity 2s ease-in-out;
+    opacity: 1;
+}
+
+form .status .okay.fadeout {
+    opacity: 0;
+}
+
+form .status .error {
+    background: #fee;
+    color: #700;
+    font-size: 0.8em;
+    padding: 0.1em 0.75em;
+    vertical-align: 0.1em;
+    border: 1px solid #700;
+}
+
+form .status .spinner > div {
+    width: 6px;
+    height: 6px;
+    margin: 1px;
+    background-color: #888;
+
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.0s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.0s infinite ease-in-out both;
+}
+
+form .status .spinner .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+}
+
+form .status .spinner .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+    0%, 80%, 100% {
+        -webkit-transform: scale(0)
+    }
+    40% {
+        -webkit-transform: scale(1.0)
+    }
+}
+
+@keyframes sk-bouncedelay {
+    0%, 80%, 100% {
+        -webkit-transform: scale(0);
+        transform: scale(0);
+    }
+    40% {
+        -webkit-transform: scale(1.0);
+        transform: scale(1.0);
+    }
+}
