Largely restored the context action menu
- It all seems to be working fine.
- There are still a few missing bits for workspaces, but just mostly to
  test the effects of missing declarations on SSR/CSR.

--- a/pmrapp/style/main.scss
+++ b/pmrapp/style/main.scss
@@ -259,7 +259,8 @@ form#sign-in input {
     padding: 0;
 }
 
-#content-action > div.flex-grow > span {
+#content-action div.flex-grow:only-child {
+    margin: 0;
 }
 
 #content-action a {
