Integrating the scaffoldvuer as a view.

--- a/pmrapp/style/main.scss
+++ b/pmrapp/style/main.scss
@@ -1,4 +1,5 @@
 @use '../node_modules/highlight.js/styles/github.min.css';
+@use "_argon_sds_archive";
 
 body {
     font-family: 'Arial', sans-serif;
